# dataforge-ai

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  mkdocs.yml  pyproject.toml
dataforge_ai/: main.py
dataforge_ai/core/: microkernel.py  plugin_interface.py
dataforge_ai/plugins/: airflow_dag_converter.py  genai_prompt_generator.py  pipeline_generator.py  react_adapter.py  react_adapter_old.py
docs/: index.md  modules.md
tests/: test_foo.py
