[tool.poetry]
name = "dataforge_ai"
version = "0.0.1"
description = "DataForge-AI is a Python framework that automates the creation of data pipelines using Generative AI. It integrates AlphaCodium for code generation and DLHub for building pipelines that can be converted into Airflow DAGs, all within a Microkernel architecture."
authors = ["Tristan van der Vlugt <fvtvlugt@outlook.com>"]
repository = "https://github.com/tvanderv92/dataforge-ai"
documentation = "https://tvanderv92.github.io/dataforge-ai/"
readme = "README.md"
packages = [
  {include = "dataforge_ai"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
langchain-openai = "^0.1.23"
langchain = "^0.2.16"
dlt = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["dataforge_ai"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["dataforge_ai"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
